изменения на Машину версию

--- a/Lab1TP.vcxproj
+++ b/Lab1TP.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AmountOfArray.cpp" />
     <ClCompile Include="CheckArraySize.cpp" />
     <ClCompile Include="CheckFile.cpp" />
     <ClCompile Include="CheckSizeOfArr.cpp" />
